[package]
name = "outpost"
version = "0.1.0"
authors = ["Nicolas Lara <nicolaslara@gmail.com>"]
edition = "2021"
rust-version  = "1.65.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use imported feature to disable all instantiate/execute/query exports
imported = []
# use callback feature to indicate the chain supports wasm hooks and allow for callbacks
callbacks = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""
optimize-m1 = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.12.11
"""

[[bin]]
name = "build-schema"
path = "build-schema/schema.rs"

[dependencies]
cosmwasm-schema =  { workspace = true }
cosmwasm-std =  { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
serde-json-wasm = { workspace = true }
bech32 = { workspace = true }
cw-utils = { workspace = true }

swaprouter = { path = "../swaprouter", features = ["imported"]}
crosschain-swaps = { path = "../crosschain-swaps", features = ["imported"]}
registry = { path = "../../packages/registry"}

[dev-dependencies]
cw-multi-test = { workspace = true }
