[package]
description = "Procedural macro for osmosis-std"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "osmosis-std-derive"
version = "0.13.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.3"
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = "1.0.98"

[dev-dependencies]
cosmwasm-std = {version = "1.1.2", features = ["stargate"]}
prost = "0.11"
serde = "1.0.142"
trybuild = {version = "1.0.63", features = ["diff"]}
