[package]
description = "Standard library for Osmosis with CosmWasm support included"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "osmosis-std"
version = "0.13.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.22", default-features = false}
cosmwasm-std = {version = "1.1.2", features = ["stargate"]}
osmosis-std-derive = {version = "0.13.2", path = "../osmosis-std-derive"}
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.1", default-features = false}
schemars = "0.8.8"

# for query
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde-cw-value = "0.7.0"
