[package]
description = "CosmWasm integration testing for Osmosis"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "osmosis-testing"
version = "0.13.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cosmrs = {version = "0.9.0", features = ["cosmwasm"]}
cosmwasm-std = "1.1.2"
osmosis-std = {version = "0.13.2", path = "../osmosis-std"}
prost = "0.11.0"
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.34"

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
cw1-whitelist = "0.15.0"
rayon = "1.5.3"
