[package]
name = "cw-nameservice"
description = "A name service"
version = "0.11.0"
authors = ["Cory Levinson <cjlevinson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/InterWasm/cw-contracts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
