[package]
name = "rate-limiter"
version = "0.1.0"
authors = ["Nicolas Lara <nicolaslara@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# Use the verbose responses feature if you want to include information about
# the remaining quotas in the SendPacket/RecvPacket responses
verbose_responses = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version =  "1.1.5", features = ["stargate", "cosmwasm_1_1"]}
cosmwasm-schema = "1.1.5"
cosmwasm-storage = "1.1.5"
cw-storage-plus = "0.16.0"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
prost = {version = "0.11.2", default-features = false, features = ["prost-derive"]}
osmosis-std-derive = {version = "0.12.0"}
osmosis-std = "0.12.0"
sha2 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.13.2"
serde-json-wasm = "0.4.1"
