[package]
name = "echo"
description = "Cosmwasm contract that always returns the same response"
version = "0.1.0"
authors = ["osmosis contributors"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""

[dependencies]
base64 = "0.21.0"
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.2", features = ["stargate"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
osmosis-std = "0.15.2"
osmosis-std-derive = "0.15.2"
prost = { version = "0.11.2", default-features = false, features = [
  "prost-derive",
] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.16.0"
