[package]
name = "cosigner-authenticator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.4"}
sylvia = "0.9.2"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
cw-storage-plus = "1.1.0"
osmosis-authenticators = "0.22.0-alpha.3"
serde-json-wasm = "1.0.0"

[dev-dependencies]
sylvia = { version = "0.9.2", features = ["mt"] }
secp256k1 = { version = "0.28.0", features = ["hashes-std"] }
