[package]
name = "spend-limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.4", features = ["stargate"] }
sylvia = "0.9.2"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
cw-storage-plus = "1.1.0"
osmosis-authenticators = "0.22.0-alpha.3"
serde-json-wasm = "1.0.0"
thiserror = { version = "1.0.23" }
osmosis-std = "0.20.1"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dev-dependencies]
#osmosis-test-tube = "20.1.2"
#sylvia = { version = "0.9.2", features = ["mt"] }
