[package]
edition = "2021"
name = "cosigner-authenticator"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = {version = "1.5"}
cw-storage-plus = "1.1.0"
osmosis-authenticators = "0.22.0-alpha.3"
schemars = "0.8.12"
serde = "1.0.180"
serde-json-wasm = "1.0.0"
sylvia = "0.9.2"

[dev-dependencies]
secp256k1 = {version = "0.28.0", features = ["hashes-std"]}
sylvia = {version = "0.9.2", features = ["mt"]}
