[package]
authors = ["osmosis contributors"]
description = "Cosmwasm contract that always returns the same response"
edition = "2021"
name = "echo"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
#serde-cw-value = "0.7.0"
osmosis-std = "0.20.1"
thiserror = { version = "1.0.31" }
#base64-simd = "0.8.0"
osmosis-authenticators = "0.22.0-alpha.19"
sha2 = "0.10.8"

[dev-dependencies]
serde-json-wasm = "1.0.0"
